Create logged in API
